Refactor Jophiel client controller, add base user model, add usage of refresh token, add API for activity log
part of ia-toki/judgels#34